--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.png" />
-  <lint rel="apple-touch-icon" href="/favicon.png" />
+  <link rel="apple-touch-icon" href="/favicon.png" />
   <meta name="description" content="Texlang Enterprise Portal" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Texlang Enterprise</title>
